tests/errors/surf_parse_14.experr
error: expected '=' in var declaration